<resources>
    <string name="app_name">ลงไหน</string>
    <string name="ads_app_id">ca-app-pub-9170460661148665~9420657819</string>
    <string name="ads_unit_id">ca-app-pub-9170460661148665/7437174372</string>

    <string name="reset_filter_type">รีเซ็ต</string>
    <string name="view_only_bts">ดูเฉพาะ BTS</string>
    <string name="view_only_mrt">ดูเฉพาะ MRT</string>
    <string name="view_only_apl">ดูเฉพาะ แอร์พอร์ตเรลลิ้งค์</string>
    <string name="view_only_srt">ดูเฉพาะ รถไฟฟ้าชานเมืองสายสีแดง</string>
    <string name="select_location_for_search_nearest">ไปที่ไหนดี?</string>
    <string name="station_nearest_title">สถานีที่ใกล้ที่สุด :</string>
    <string name="location_not_found_label">ค้นหาสถานที่\nที่จะเดินทาง</string>
    <string name="bts_code_label">BTS</string>
    <string name="mrt_code_label">MRT</string>
    <string name="apl_code_label">ARL</string>
    <string name="bts_g_code_label">BTS-G</string>
    <string name="srtet_code_label">SRTET</string>
    <string name="prefix_name_bts_SKW_label">BTS สายสีเขียวสุขุมวิท</string>
    <string name="prefix_name_bts_sl_label">BTS สายสีเขียวสีลม</string>
    <string name="prefix_met_blue_label">MRT สายสีน้ำเงิน</string>
    <string name="prefix_met_purple_label">MRT สายสีม่วง</string>
    <string name="prefix_apl_label">แอร์พอร์ต เรล ลิงก์</string>
    <string name="prefix_bts_g_label">BTS สายสีทอง</string>
    <string name="prefix_srtet_label">รถไฟฟ้าสายสีแดง</string>
    <string name="prefix_mrt_yellow">MRT สายสีเหลือง</string>
    <string name="see_more_label">ดูเพิ่มเติม..</string>
    <string name="list_of_nearby_station_label">รายชื่อสถานีใกล้ : %s</string>
    <string name="station_near_me_label">ใกล้ฉัน</string>

    <string name="choose_start_station_label">เลือกสถานีเริ่มต้น</string>
    <string name="go_to_with_text_label">ไปยัง %s</string>
    <string name="description_way_with_dash">รายละเอียดเส้นทาง : -</string>
    <string name="description_way_with_value_of_station">รายละเอียดเส้นทาง (%s สถานี) :</string>
    <string name="back_label">ย้อนกลับ</string>
    <string name="select_station_label">เลือกสถานี</string>
    <string name="search_station_label">ค้นหาสถานี…</string>
    <string name="search_station_not_found">ไม่พบสถานีที่ค้นหา</string>
</resources>