<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.detail.SelectStationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_light"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/status_bar_color"
                android:paddingHorizontal="16dp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imv_back"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_back"
                        card_view:tint="@color/white" />

                    <TextView
                        android:id="@+id/tv_title_tools_bar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="8dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/mn_paethai_bystorylog_regular"
                        android:singleLine="true"
                        android:text="@string/select_station_label"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_sub_title" />

                </LinearLayout>

            </com.google.android.material.appbar.AppBarLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_station"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="@dimen/space_large"
            android:background="@drawable/bg_white_stroke_black_16dp"
            android:hint="@string/search_station_label"
            android:padding="16dp"
            android:textCursorDrawable="@drawable/cursor_color" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_station"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            tools:itemCount="10"
            tools:listitem="@layout/view_item_station" />

        <TextView
            android:id="@+id/tv_search_not_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:fontFamily="@font/mn_paethai_bystorylog_regular"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/search_station_not_found"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>

</layout>