<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BottomSheetDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/space_large">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_reset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/mn_paethai_bystorylog_regular"
                android:maxLines="1"
                android:text="@string/reset_filter_type"
                android:textColor="@color/black"
                android:textSize="@dimen/text_headline"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imv_close"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_close"
                android:tint="@color/gray700" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_larger"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/icon_bts" />

            <TextView
                android:id="@+id/tv_view_only_bts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/space_normal"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/mn_paethai_bystorylog_regular"
                android:maxLines="1"
                android:text="@string/view_only_bts"
                android:textColor="@color/black"
                android:textSize="@dimen/text_headline" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imv_view_only_bts_selected"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_check"
                android:tint="@color/opposite_primary"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_larger"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/icon_mrt" />

            <TextView
                android:id="@+id/tv_view_only_mrt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/space_normal"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/mn_paethai_bystorylog_regular"
                android:maxLines="1"
                android:text="@string/view_only_mrt"
                android:textColor="@color/black"
                android:textSize="@dimen/text_headline" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imv_view_only_mrt_selected"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_check"
                android:tint="@color/opposite_primary"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_larger"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/icon_apl" />

            <TextView
                android:id="@+id/tv_view_only_apl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/space_normal"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/mn_paethai_bystorylog_regular"
                android:maxLines="1"
                android:text="@string/view_only_apl"
                android:textColor="@color/black"
                android:textSize="@dimen/text_headline" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imv_view_only_apl_selected"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_check"
                android:tint="@color/opposite_primary"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_larger"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/icon_srt" />

            <TextView
                android:id="@+id/tv_view_only_srt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/space_normal"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/mn_paethai_bystorylog_regular"
                android:maxLines="1"
                android:text="@string/view_only_srt"
                android:textColor="@color/black"
                android:textSize="@dimen/text_headline" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imv_view_only_srt_selected"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_check"
                android:tint="@color/opposite_primary"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_larger"
            android:background="@drawable/bg_white_corner_10dp"
            android:backgroundTint="@color/primary"
            android:fontFamily="@font/mn_paethai_bystorylog_regular"
            android:text="ยืนยัน"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>