<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.detail.DestinationDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_light"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/status_bar_color"
                android:paddingHorizontal="16dp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imv_back"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_back"
                        card_view:tint="@color/white" />

                    <TextView
                        android:id="@+id/tv_title_tools_bar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="8dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/mn_paethai_bystorylog_regular"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_sub_title"
                        tools:text="ไปยัง ศูนย์ประชุมแห่งชาติศิริกิต" />

                </LinearLayout>

            </com.google.android.material.appbar.AppBarLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/layout_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <LinearLayout
                android:id="@+id/cc_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_large"
                android:layout_marginTop="@dimen/space_larger"
                android:background="@drawable/bg_white_stroke_black_16dp"
                android:orientation="vertical"
                android:paddingHorizontal="12dp"
                android:paddingVertical="18dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginEnd="@dimen/space_normal_12dp"
                        android:src="@drawable/ic_circle" />

                    <FrameLayout
                        android:id="@+id/layout_station_code_start"
                        android:layout_width="65dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/ic_bg_apl"
                        android:paddingVertical="@dimen/space_smaller"
                        android:visibility="gone"
                        tools:visibility="visible">

                        <TextView
                            android:id="@+id/tv_station_code_start"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:fontFamily="@font/mn_paethai_bystorylog_regular"
                            android:textColor="@color/white"
                            tools:text="BTS" />
                    </FrameLayout>

                    <TextView
                        android:id="@+id/tv_station_start"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/mn_paethai_bystorylog_regular"
                        android:singleLine="true"
                        android:text="@string/choose_start_station_label"
                        android:textColor="@color/gray500"
                        android:textSize="@dimen/text_sub_title" />
                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="18dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:src="@drawable/ic_circle"
                        card_view:tint="@color/primary_red" />

                    <FrameLayout
                        android:id="@+id/layout_station_code_end"
                        android:layout_width="65dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/space_normal_12dp"
                        android:paddingVertical="@dimen/space_smaller">

                        <TextView
                            android:id="@+id/tv_station_code_end"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:fontFamily="@font/mn_paethai_bystorylog_regular"
                            android:textColor="@color/white"
                            tools:text="BTS" />
                    </FrameLayout>

                    <TextView
                        android:id="@+id/tv_station_end"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/mn_paethai_bystorylog_regular"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_sub_title"
                        tools:text="ศูนย์ประชุมแห่งชาติศิริกิต" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="18dp"
                android:background="@color/gray200" />

            <TextView
                android:id="@+id/tv_title_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="18dp"
                android:ellipsize="end"
                android:fontFamily="@font/mn_paethai_bystorylog_regular"
                android:singleLine="true"
                android:text="@string/description_way_with_dash"
                android:textColor="@color/black"
                android:textSize="@dimen/text_sub_title" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateTint="@color/blue_dark" />

            <androidx.compose.ui.platform.ComposeView
                android:id="@+id/composeView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_marginBottom="8dp" />

        </LinearLayout>

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="12dp"
            ads:adSize="BANNER"
            ads:adUnitId="@string/ads_unit_id"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

</layout>